src/objects/DF_EventAttendee__c.object
<CustomObject>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <label>DF Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DF_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dementia Friend Champion</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DF EventAttendance</relationshipLabel>
        <relationshipName>DF_EventAttendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DF_EntAtExt_Id__c</fullName>
        <externalId>true</externalId>
        <label>DF EntAtExt Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DF_Event__c</fullName>
        <label>DF Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DF_Event__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Champion Training Course</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>DF_Event__c</referenceTo>
        <relationshipLabel>DF EventAttendees</relationshipLabel>
        <relationshipName>DF_EventAttendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DF EventAttendee</label>
    <nameField>
        <displayFormat>DFE-{0000000}</displayFormat>
        <label>DF EventAttendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DF EventAttendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>